Fix z-index popin "voir l'annonce complète"

--- a/ADAM/web/bundles/front/css/style.css
+++ b/ADAM/web/bundles/front/css/style.css
@@ -310,7 +310,6 @@ nav.navbar > .container-fluid .navbar-nav.navbar-right > li.open a.dropdown-togg
     margin-top: 30px;
     margin-bottom: 30px;
     padding: 10px;
-    z-index: 0;
     border: 2px solid var(--descartes-rouge-color);
     background-color: white;
 }
@@ -318,6 +317,7 @@ nav.navbar > .container-fluid .navbar-nav.navbar-right > li.open a.dropdown-togg
 .third-section .calendar-container .ui-widget-header {
     background-color: var(--descartes-rouge-color);
 }
+
 .third-section .calendar-container .fc-button-inner,
 .third-section .calendar-container .fc-header-title {
     color: var(--descartes-rouge-color);
@@ -327,6 +327,10 @@ nav.navbar > .container-fluid .navbar-nav.navbar-right > li.open a.dropdown-togg
 .third-section .section-title h2:before,
 .third-section .section-title p {
     color: white;
+}
+
+.third-section .calendar-container .fc-header .fc-header-right .fc-button {
+    z-index: 0;
 }
 
 /*
